--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,5 @@
 [phases.setup]
-nixPkgs = ["python39", "git"]
-
-[phases.install]
-cmds = ["pip install -r requirements.txt"]
+aptPkgs = ["git"]
 
 [start]
 cmd = "python app.py"
